make my profile prettier

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               I am very excited to start working on front end development with Le Wagon.
             </p>
 
-            <a class="btn-blue" href="#">Discover Le Wagon</a>
+            <a class="btn-blue" href="https://www.lewagon.com/">Discover Le Wagon</a>
       </div>
 
       <div class="card-white">
